frontend/src/pages/listview/PlaylistHeader.css
.playlist-header {
    display: flex;
    align-items: flex-end;
    padding: 20px;
    background-color: transparent;
}

.return-text {
    display: flex;
    align-items: flex-start;
    margin-right: 20px;
    /* Add margin between the return text and the playlist icon */
    text-shadow: 1px 1px 2px rgba(96, 96, 96, 0.5);
    /* Horizontal offset, vertical offset, blur radius, color */
}

.return-text svg {
    width: 24px;
    /* Adjust the width of the arrow-back icon */
    height: 24px;
    /* Adjust the height of the arrow-back icon */
    margin-right: 5px;
    /* Add margin between the arrow-back icon and the text */
}

.playlist-icon {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 130px;
    height: 130px;
    background-color: lightblue;
    border-radius: 20%;
    margin-right: 20px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.playlist-icon-emoji {
    font-size: 40px;
    text-shadow: 3px 3px 3px rgba(66, 66, 66, 0.5);

}

.playlist-info {
    flex: 1;
}

.playlist-title {
    font-size: 35px;
    font-weight: bold;
    margin-bottom: 10px;
    text-align: left;
    text-shadow: 1px 1px 2px rgba(96, 96, 96, 0.5);
    /* Horizontal offset, vertical offset, blur radius, color */
}

.playlist-buttons {
    display: flex;
    align-items: flex-end;
}

.playlist-button {
    position: relative;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background: linear-gradient(135deg, #7bccf4, #d1f4ff);
    margin-right: 20px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.playlist-button:hover {
    transform: scale(1.1);
    /* Increase size on hover */
    cursor: pointer;
}

.playlist-button::before {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 20px;
}

/* Play symbol */
/* .playlist-button.play::before {
    content: '▶'; /* Unicode character for play icon */

.playlist-button.play::before {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='icon icon-tabler icon-tabler-player-play' width='24' height='24' viewBox='0 0 24 24' stroke-width='2' stroke='%23ffffff' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M7 4v16l13 -8z' /%3E%3C/svg%3E");
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    /* Center the symbol */
    width: 60%;
    /* Adjust size */
    height: 60%;
    /* Adjust size */
}

.playlist-button.shuffle::before {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='icon icon-tabler icon-tabler-arrows-shuffle' width='24' height='24' viewBox='0 0 24 24' stroke-width='2' stroke='%23ffffff' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M18 4l3 3l-3 3' /%3E%3Cpath d='M18 20l3 -3l-3 -3' /%3E%3Cpath d='M3 7h3a5 5 0 0 1 5 5a5 5 0 0 0 5 5h5' /%3E%3Cpath d='M21 7h-5a4.978 4.978 0 0 0 -3 1m-4 8a4.984 4.984 0 0 1 -3 1h-3' /%3E%3C/svg%3E");
    /* SVG data URI */
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 60%;
    /* Adjust size */
    height: 60%;
    /* Adjust size */
}

.playlist-button.share::before {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='icon icon-tabler icon-tabler-share-3' width='24' height='24' viewBox='0 0 24 24' stroke-width='2' stroke='%23ffffff' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M13 4v4c-6.575 1.028 -9.02 6.788 -10 12c-.037 .206 5.384 -5.962 10 -6v4l8 -7l-8 -7z' /%3E%3C/svg%3E");
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    /* Center the symbol */
    width: 60%;
    /* Adjust size */
    height: 60%;
    /* Adjust size */
}

